--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Fun Facts About Planet Earth</h1>
+        <button id="random-fact-button">Show Random Fact</button>
         <ul id="facts-list">
             <!-- Facts will be inserted here by JavaScript -->
         </ul>
